welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value ecritmessage
  ecritmessage(a)
  ^ColumnByColumn:4: error: not found: value a
  ecritmessage(a)
               ^ColumnByColumn:5: error: not found: value Yfinal
  while (getY!=Yfinal || getY()!=yfinal){
               ^ColumnByColumn:7: error: value update is not a member of Int
    if (getY()=yfinal){
        ^ColumnByColumn:8: error: not found: value setPas
      setPas(getX()+1,0)
      ^ColumnByColumn:10: error: not found: value setPOs
      setPOs(getX(),getY()+1)
      ^